# MetaGen

./: .gitignore  COMPLETE_IMPLEMENTATION_SUMMARY.md  Dockerfile  FEATURE_IMPLEMENTATION_SUMMARY.md  FIXES_AND_IMPROVEMENTS_SUMMARY.md  INSTALLATION_GUIDE.md  LOCAL_SETUP_GUIDE.md  METADATA_COMPLETION_IMPLEMENTATION.md  OFFLINE_PROCESSING_GUIDE.md  QUICK_START.md  README.md  RECORD_COUNT_AND_COMPLIANCE_FIXES.md  SEMANTIC_SEARCH_SETUP.md  SETUP_STATUS.md  SETUP_SUMMARY.md  STRUCTURED_DESCRIPTION_ENHANCEMENT.md  app.py  celery_app.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  run_flask.sh  run_performance_evaluation.py  semantic_search_requirements.txt  setup.bat  setup.py  setup.sh  start_celery_worker.bat  start_celery_worker.sh  test_record_count_fix.py
app/: __init__.py  config.py  forms.py
app/models/: __init__.py  base.py  dataset.py  dataset_feedback.py  metadata.py  user.py
app/routes/: __init__.py  api.py  api_quality.py  auth.py  datasets.py  feedback.py  main.py  reports.py
app/services/: __init__.py  ai_standards_service.py  background_processing_service.py  collection_metadata_service.py  data_cleaning_service.py  data_visualization_service.py  dataset_monitor_service.py  dataset_service.py  description_generator.py  download_service.py  (+15 more)
attached_assets/: PROPOSAL DATASET METADATA.docx
client/: index.html
fallback_data/: english_stopwords.txt  sentence_patterns.txt
server/: dataset-fetcher.ts  dataset-processor.ts  metadata-generator.ts  nlp.ts  routes.ts  storage.ts
shared/: schema.ts
(+93 files in other folders)
